--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 * {
   box-sizing: border-box;
+  
 }
 body {
   margin: 0;
   width: 100%;
-  font-family: sans-serif;
+  font-family: 'Inter', sans-serif;;
   min-width: 1245px;
 }
 .site-header {
